--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,22 @@ classifiers = [
 "Homepage" = "https://github.com/jams2/microkanren"
 "Bug Tracker" = "https://github.com/jams2/microkanren/issues"
 
+[project.optional-dependencies]
+dev = [
+    "black ~= 23.1.0",
+    "isort ~= 5.12.0",
+]
+testing = ["pytest ~= 7.2.2"]
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.pytest.ini_options]
+pythonpath = ["src"]
+minversion = 7.0
+
+[tool.isort]
+profile = "black"
+py_version = 310
+known_first_party = ["microkanren"]
