--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dev = [
     "black ~= 23.1.0",
     "ruff ~= 0.0.256",
 ]
-testing = ["pytest ~= 7.2.2"]
+testing = ["pytest ~= 7.2.2", "pytest-profiling ~= 1.7.0"]
 
 [build-system]
 requires = ["hatchling"]
