--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "microkanren"
-version = "0.1.0"
+version = "0.2.0"
 authors = [
     { name="Joshua Munn", email="public@elysee-munn.family" },
 ]
-description = "A Python implementation of microKanren extended with constraints"
+description = "A Python implementation of microkanren extended with constraints"
 readme = "README.md"
-requires-python = ">= 3.10"
+requires-python = "==3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -14,7 +14,8 @@ classifiers = [
     "Development Status :: 2 - Pre-Alpha",
 ]
 dependencies = [
-    "pyrsistent ~= 0.19"
+    "pyrsistent ~= 0.19",
+    "fastcons ~= 0.2.0",
 ]
 
 [project.urls]
