--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "microkanren"
-version = "0.2.1"
+version = "0.2.2"
 authors = [
     { name="Joshua Munn", email="public@elysee-munn.family" },
 ]
 description = "A Python implementation of microkanren extended with constraints"
 readme = "README.md"
-requires-python = "==3.11"
+requires-python = "~=3.11"
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
