--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
 dependencies = [
     "pyrsistent ~= 0.19",
     "fastcons ~= 0.3.0",
+    "immutables ~= 0.19",
 ]
 license = {file = "LICENSE"}
 
