--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dev = [
     "ruff ~= 0.0.256",
 ]
 testing = ["pytest ~= 7.2.2", "pytest-profiling ~= 1.7.0"]
+build = ["hatch ~= 1.7.0"]
 
 [build-system]
 requires = ["hatchling"]
