--- a/tox.ini
+++ b/tox.ini
@@ -8,4 +8,9 @@ description = run the tests with pytest
 deps =
     pytest==7.2.2
 commands =
-    pytest {tty:--color=yes} {posargs}
+    pytest {tty:--color=yes} {posargs:tests}
+
+[gh]
+python =
+    3.12 = py312
+    3.11 = py311
