Fix publish workflow, bump → 0.4.3

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,15 +1,11 @@
 name: microkanren publishing
 
 on:
-  release: [published]
+  release:
+    types: [published]
 
 jobs:
-  build:
-    needs: test
-    runs-on: ubuntu-latest
-
   publish:
-    needs: build
     runs-on: ubuntu-latest
     environment: publish
 
